--- a/index.html
+++ b/index.html
@@ -1,41 +1,26 @@
-<!doctype html>
-<html lang="fa" dir="rtl">
+<!DOCTYPE html>
+<html lang="fa">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tiara Intro</title>
-
-  <!-- ضد کش -->
-  <link rel="stylesheet" href="/style.css?v=1" />
+  <title>Tiara</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <main class="scene">
-    <!-- بک‌گراند پل -->
-    <div class="layer bridge" aria-hidden="true"></div>
+  <div class="scene">
+    <div class="bridge"></div>
+    <div class="fog"></div>
 
-    <!-- مه -->
-    <div class="layer fog" aria-hidden="true"></div>
+    <h1 class="title">تیارا</h1>
 
-    <!-- وینیت + تون صبح -->
-    <div class="layer grade" aria-hidden="true"></div>
-
-    <!-- پرده مشکی ابتدای ورود -->
-    <div class="curtain" aria-hidden="true"></div>
-
-    <!-- لوگو -->
-    <header class="brand">
-      <h1 class="title">تیارا</h1>
-    </header>
-
-    <!-- منوی اولیه -->
-    <nav class="menu" aria-label="منوی اصلی">
-      <button class="menu-item">غذاها</button>
-      <button class="menu-item">نوشیدنی گرم</button>
-      <button class="menu-item">نوشیدنی سرد</button>
-      <button class="menu-item">میان‌وعده</button>
-    </nav>
-  </main>
+    <div class="menu">
+      <button>غذاها</button>
+      <button>نوشیدنی گرم</button>
+      <button>نوشیدنی سرد</button>
+      <button>میان‌وعده</button>
+    </div>
+  </div>
 
 </body>
 </html>
